tests/paczka2/big_fuzzy/35244264.err
Error in line 1: RZcGUJ S103 43,8
Error in line 2: B4TU9otSmXg S103 80,7
Error in line 4: B4TU9otSmXg S665 58,3
Error in line 5: B4TU9otSmXg A144 16,4
Error in line 24: RZcGUJ S103 -1,1
Error in line 18: B4TU9otSmXg A144 66,0
Error in line 21: RZcGUJ S103 45,6
Error in line 25: yurDt S103 49,6
Error in line 31: B4TU9otSmXg S665 175,7
Error in line 64: eQ5ixHz8Lwt A970 72,7
Error in line 68: eQ5ixHz8Lwt A144 50,7
Error in line 74: qSmjAcRBiGf S103 253,0
Error in line 75: B4TU9otSmXg A144 51,5
Error in line 83: CFISU3oV S103 -1,4
Error in line 79: CFISU3oV S103 11,9
Error in line 94: A144 A144 50,4
Error in line 93: eQ5ixHz8Lwt A144 83,9
Error in line 98: A144 A970 29,0
Error in line 100: eQ5ixHz8Lwt S665 35,5
Error in line 105: A144 S665 24,3
Error in line 109: A144 S103 63,1
Error in line 113: qSmjAcRBiGf A970 55,2
Error in line 103: yurDt A970 21,5
Error in line 118: yurDt S665 54,8
Error in line 132: eQ5ixHz8Lwt A144 3,2
Error in line 134: eQ5ixHz8Lwt S103 89,0
Error in line 130: qSmjAcRBiGf S103 117,3
Error in line 147: eQ5ixHz8Lwt A144 9,7
Error in line 151: CFISU3oV S665 214,4
Error in line 165: eQ5ixHz8Lwt S103 50,1
Error in line 171: CFISU3oV S103 13,67
Error in line 170: eQ5ixHz8Lwt A144 35,4
Error in line 167: CFISU3oV S103 12,7
Error in line 173: eQ5ixHz8Lwt S103 19,5
Error in line 176: eQ5ixHz8Lwt S665 29,3
Error in line 172: B4TU9otSmXg A144 29,0
Error in line 178: B4TU9otSmXg A970 74,1
Error in line 177: eQ5ixHz8Lwt A144 97,4
Error in line 187: CFISU3oV S103 83,8
Error in line 148: qSmjAcRBiGf A970 274,7
Error in line 198: eQ5ixHz8Lwt A144 3,1
Error in line 200: RZcGUJ S103 71,6
Error in line 222: yurDt A144 -4,5
Error in line 225: eQ5ixHz8Lwt A144 84,88
Error in line 226: eQ5ixHz8Lwt A144 167,9
Error in line 227: eQ5ixHz8Lwt A970 60,0
Error in line 228: eQ5ixHz8Lwt S103 42,8
Error in line 197: qSmjAcRBiGf A144 34,6
Error in line 218: yurDt A144 58,1
Error in line 233: A144 A144 37,7
Error in line 234: A144 S103 39,3
Error in line 223: RZcGUJ S665 317,9
